force-app/main/default/objects/Target__c/fields/Blue_Sky_Notes__c.field-meta.xml
<CustomField>
    <fullName>Blue_Sky_Notes__c</fullName>
    <label>Blue Sky Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>