force-app/main/default/objects/Target__c/fields/Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Client_Comments__c</fullName>
    <label>Client Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>