force-app/main/default/objects/Target__c/fields/Coverage_Person__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Person__c</fullName>
    <label>Coverage Person</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thomas Donadio</fullName>
            </value>
            <value>
                <fullName>John DiBella</fullName>
            </value>
            <value>
                <fullName>Gabriel Silva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>