force-app/main/default/objects/Target__c/fields/Date_Status_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Status_Changed__c</fullName>
    <label>Date Status Changed</label>
    <type>Date</type>
</CustomField>