force-app/main/default/objects/Target__c/fields/Direct_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Direct_Phone_Number__c</fullName>
    <formula>Primary_Contact__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct Phone Number</label>
    <type>Text</type>
</CustomField>