force-app/main/default/objects/Target__c/fields/Fallout__c.field-meta.xml
<CustomField>
    <fullName>Fallout__c</fullName>
    <label>Fallout</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>