force-app/main/default/objects/Target__c/fields/Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Next_Steps__c</fullName>
    <label>Next Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Outreach In Process</fullName>
            </value>
            <value>
                <fullName>Target Reviewing Material</fullName>
            </value>
            <value>
                <fullName>Target Call</fullName>
            </value>
            <value>
                <fullName>Client Introduction</fullName>
            </value>
            <value>
                <fullName>Gather Intial/Additional Information</fullName>
            </value>
            <value>
                <fullName>Submit NDA/IDR</fullName>
            </value>
            <value>
                <fullName>Recieve/Follow Up on NDA/IDR</fullName>
            </value>
            <value>
                <fullName>Client Decision</fullName>
            </value>
            <value>
                <fullName>Management Meeting/Site Visit</fullName>
            </value>
            <value>
                <fullName>Data Exchange</fullName>
            </value>
            <value>
                <fullName>Dilligence</fullName>
            </value>
            <value>
                <fullName>Submit IOI/LOI</fullName>
            </value>
            <value>
                <fullName>Advance Transaction</fullName>
            </value>
            <value>
                <fullName>Blue Sky Follow Up</fullName>
            </value>
            <value>
                <fullName>Client Follow Up</fullName>
            </value>
            <value>
                <fullName>Monitor/Keep &quot;Warm&quot;</fullName>
            </value>
            <value>
                <fullName>Follow Up Scheduled</fullName>
            </value>
            <value>
                <fullName>Re-Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>