force-app/main/default/objects/Target__c/fields/Notes_for_Client__c.field-meta.xml
<CustomField>
    <fullName>Notes_for_Client__c</fullName>
    <label>Notes for Client</label>
    <length>255</length>
    <type>Text</type>
</CustomField>