force-app/main/default/objects/Target__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>Pipeline</fullName>
            </value>
            <value>
                <fullName>Initial Contact</fullName>
            </value>
            <value>
                <fullName>Gathered Information</fullName>
            </value>
            <value>
                <fullName>Client Introduction</fullName>
            </value>
            <value>
                <fullName>Management Meeting/Site Visit</fullName>
            </value>
            <value>
                <fullName>Data Exchange/Evaluation</fullName>
            </value>
            <value>
                <fullName>IOI Submitted</fullName>
            </value>
            <value>
                <fullName>LOI Submitted</fullName>
            </value>
            <value>
                <fullName>LOI Signed</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>