force-app/main/default/objects/Target__c/validationRules/Status_Client_Not_Interested.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Client_Not_Interested</fullName>
    <active>true</active>
    <description>Whenever “Status” is changed to “Client Not Interested”, it requires a selection from “Fallout” in order to save.</description>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Client Not Interested&quot;),
    ISPICKVAL(Fallout__c, &quot;&quot;)
)</errorConditionFormula>
    <errorDisplayField>Fallout__c</errorDisplayField>
    <errorMessage>Required if Status = Client Not Interested</errorMessage>
</ValidationRule>