force-app/main/default/objects/Target__c/listViews/All_Targets.listView-meta.xml
<ListView>
    <fullName>All_Targets</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Stage__c</columns>
    <columns>Blue_Sky_Notes__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Targets</label>
</ListView>