force-app/main/default/objects/Target__c/listViews/My_Opportunities.listView-meta.xml
<ListView>
    <fullName>My_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Engagement__c</columns>
    <columns>Stage__c</columns>
    <columns>Blue_Sky_Notes__c</columns>
    <columns>Next_Steps__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Interested</value>
    </filters>
    <label>Opportunities</label>
</ListView>